--- a/PsuTimetable/PsuTimetable/PsuTimetable.csproj
+++ b/PsuTimetable/PsuTimetable/PsuTimetable.csproj
@@ -19,5 +19,8 @@
     <EmbeddedResource Update="LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="MainPage1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
