--- a/PsuTimetable/PsuTimetable.Android/PsuTimetable.Android.csproj
+++ b/PsuTimetable/PsuTimetable.Android/PsuTimetable.Android.csproj
@@ -124,5 +124,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\outline_refresh_24.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\outline_people_24.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
